first version of incomplete claude code